@@ -17,6 +17,10 @@ chronological order (most recent first)
 ==========================================================================
 
 Version 1.8.3 patchlevel 11                     ??? ??, 2009
+Functions:
+  * testlock(<boolexp>, <victim>) tests a lock without setting it.
+    Suggested by Mercutio@M*U*S*H. [GM]
+
 Fixes:
  * Windows compile fixes.
  * page/port didn't evaluate its arguments properly. Reported
